--- a/3-MNIST_FC_vs_Conv.ipynb
+++ b/3-MNIST_FC_vs_Conv.ipynb
@@ -33,7 +33,7 @@
     "import torchinfo\n",
     "# importing a module with utilities for displaying stats and data\n",
     "import sys\n",
-    "sys.path.insert(1, '../util')\n",
+    "sys.path.insert(1, 'util')\n",
     "import vcpi_util\n",
     "\n",
     "import numpy as np\n",
