Updated comments on the architecture

--- a/6.1_balanced evaluation.ipynb
+++ b/6.1_balanced evaluation.ipynb
@@ -176,24 +176,24 @@
     "    def forward(self, x):    \n",
     "        \n",
     "        # input = (bs, 3, 32, 32)\n",
-    "        x = self.conv1(x) # -> (bs, 16, 26, 26)\n",
+    "        x = self.conv1(x) # -> (bs, 16, 30, 30)\n",
     "        x = self.bn1(x)\n",
     "        x = self.relu1(x)\n",
-    "        x = self.conv2(x) # -> (bs, 32, 24, 24)\n",
+    "        x = self.conv2(x) # -> (bs, 32, 28, 28)\n",
     "        x = self.bn2(x)\n",
     "        x = self.relu2(x)\n",
-    "        x = self.maxpool1(x)\n",
+    "        x = self.maxpool1(x) # -> (bs, 32, 14, 14)\n",
     "        \n",
-    "        x = self.conv3(x) # -> (bs, 48, 22, 22)\n",
+    "        x = self.conv3(x) # -> (bs, 48, 12, 12)\n",
     "        x = self.bn3(x)\n",
     "        x = self.relu3(x)\n",
-    "        x = self.conv4(x) # -> (bs, 48, 20, 20)\n",
+    "        x = self.conv4(x) # -> (bs, 48, 10, 10)\n",
     "        x = self.bn4(x)\n",
     "        x = self.relu4(x)\n",
-    "        x = self.maxpool2(x)\n",
+    "        x = self.maxpool2(x) # -> (bs, 48, 5, 5)\n",
     "        \n",
-    "        x = torch.flatten(x,1) # -> (bs, 48 * 20 * 20 = 1920)\n",
-    "        x = self.fc1(x)        # -> (bs, 10)\n",
+    "        x = torch.flatten(x,1) # -> (bs, 48 * 5 * 5 = 1200)\n",
+    "        x = self.fc1(x)        # -> (bs, num_classes)\n",
     "\n",
     "        return(x)\n",
     "\n",
