Adding notebook for autoencoders

--- a/8-transferLearning.ipynb
+++ b/8-transferLearning.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "Original data set can be found in: https://www.kaggle.com/c/dogs-vs-cats/data\n",
     "\n",
-    "![image](dogs_vs_cats.png)\n",
+    "![image](notebook_images/dogs_vs_cats.png)\n",
     "\n",
     "The dataset consists of 25000 thousand images from cats and dogs. 2000 images were randomly collected for the test set. From the remaining 23000 images, 20% were used for the validation set.\n",
     "\n"
