Updated concetps and notebook 01

--- a/concepts/01-Artificial_neuron_and_activation_functions.ipynb
+++ b/concepts/01-Artificial_neuron_and_activation_functions.ipynb
@@ -1,13 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Artificial Neuron and Activation Functions\n",
+    "\n",
+    "This notebook explores the fundamental building block of a  neural network: the neuron.\n",
+    "\n",
+    "The neuron is the computing element of the network, with input and output neurons acting as the interface between the network and its surrounding framework."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Artificial Neuron\n",
     "\n",
-    "The artificial neuron, aka unit, is the building block of Deep Learning Networks for computer vision. With a biological inspiration on brain neurons, it is a simple computational unit that is commonly grouped in layers to create neural networks. \n",
+    "The artificial neuron, aka unit, is the building block of Deep Learning Networks. With a biological inspiration on brain neurons, it is a simple computational unit that is commonly grouped in layers to create neural networks. \n",
     "\n",
     "A simplified view of the brain neuron is presented in the following figure ([credit](https://pixabay.com/vectors/neuron-nerve-cell-axon-dendrite-296581/))\n",
     "\n",
@@ -15,13 +26,13 @@
     " <img src=\"images/neuron.png\" >\n",
     "</div>\n",
     "\n",
-    "A very simplified description of the neurons inner workings is as follows: the neuron receives its input through the dendrites, synapses carry the input to the cell's body (soma). The soma processes the inputs and produces an output that is carried through the axon. At the end of the axon we can find dendrites from other cells.\n",
+    "A very simplified description of a neuron's inner workings is as follows: the neuron receives its input through the dendrites. Synapses transmit the input signals to the cell body (soma), which processes them. If the processed signal reaches a certain threshold, the neuron generates an output signal that travels down the axon. At the end of the axon, synaptic terminals connect to the dendrites of other neurons through synapses.\n",
     "\n",
     "<div align=\"center\">\n",
     " <img src=\"images/artificial_neuron.png\" >\n",
     "</div>\n",
     "\n",
-    "The artifical neuron simulates this simplified description. It was inputs (dendrites), the connections between the inputs and the neuron are called weights (synapses). The weighted input is summed and post processed with an activation function $f$ (soma processing). The post processed output is then made available to other neurons (axon).\n",
+    "The artificial neuron simulates this simplified description. It has inputs (analogous to dendrites), and the connections between the inputs and the neuron are represented by weights (analogous to synapses). The weighted inputs are summed and processed using an activation function $f$ (analogous to soma processing). The processed output is then passed to other neurons (analogous to the axon).\n",
     "\n",
     "In the field of deep learning several activation functions have been proposed, in here we cover some of the most common ones."
    ]
@@ -33,9 +44,9 @@
    "source": [
     "## Activation functions\n",
     "\n",
-    "The role of an activation function is to transform the weighted sum of the inputs into a value that is fed to subsequent neurons.\n",
+    "The role of an activation function is to transform the weighted sum of the inputs into a value that is fed to subsequent neurons. Activation functions introduce non-linearity into neural networks, enabling them to learn complex patterns.\n",
     "\n",
-    "In here we explore some of the most common activation functions, providing both a python implementation and torch usage.\n",
+    "Here, we explore some of the most common activation functions, providing both a Python implementation and Torch usage.\n",
     "\n",
     "For a full list of activation functions supported in torch see [Non linear activations](https://pytorch.org/docs/stable/nn.html#non-linear-activations-weighted-sum-nonlinearity)"
    ]
@@ -53,14 +64,18 @@
     "\n",
     "output range: $]0,1[$\n",
     "\n",
-    "Due to its output range it can be interpreted as a probability in a binary class classifier with a single output.\n",
+    "Due to its output range, it can be interpreted as a probability in a binary class classifier with a single output.\n",
     "\n",
-    "$f'(x) = f(x) (1 - f(x))$\n"
+    "The derivative of the sigmoid function is:\n",
+    "\n",
+    "$f'(x) = f(x) (1 - f(x))$\n",
+    "\n",
+    "Ref: Rumelhart, D. E., Hinton, G. E., & Williams, R. J. (1986). Learning representations by back-propagating errors.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,16 +167,18 @@
     "\n",
     "output range: $]-1,1[$\n",
     "\n",
-    "Both $sigmoid$ and $tanh$ are *S* shaped functions, the main difference being in the output range. The  advantage is that $tanh$ provides zero centered outputs due to its output range. Furthermore, $tanh$ has a steeper gradient compared to the sigmoid.\n",
+    "Both $sigmoid$ and $tanh$ are *S* shaped functions, with the main difference being in the output range. The  advantage of the $tanh$ is that it provides zero-centered outputs due to its output range. Furthermore, $tanh$ has a steeper gradient compared to the $sigmoid$.\n",
+    "\n",
+    "The derivative of the tanh function is:\n",
     "\n",
     "$f'(x) = 1 - f(x)^2$\n",
     "\n",
-    "The derivative exposes the main issue with both these functions. As the absolute value of $x$ increases the derivatives are going to get smaller and smaller.  As the weight updates are proportional to the derivatives, this implies that very small updates will be applied for these weights."
+    "The derivative exposes a key issue with both these functions. As the absolute value of $x$ increases, the derivatives become smaller and smaller.  Since the weight updates are proportional to the derivatives, this means that very small updates are applied to the weights as the network trains."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,24 +254,28 @@
    "source": [
     "### ReLU: Rectified Linear Unit.\n",
     "\n",
-    "This is the most common activation function nowadays. It is also probably the simplest activation function. Being piecewise linear makes its computation efficient and it has provided consistently good results in CNNs.\n",
+    "The ReLU activation function is the most common activation function today and is also one of the simplest. It is also probably the simplest activation function. Being piecewise linear makes it computationally efficient, and it has consistently provided  good results in CNNs.\n",
     "\n",
     "Both sigmoid and tanh functions have shallow derivatives when the absolute value of the input is very large. ReLU does not suffer from that problem for positive inputs, having a constant derivative.\n",
+    "\n",
+    "This is particularly meaningful in deep networks, as gradients tend to get smaller as they are backpropagated through multiple layers. With the $sigmoid$ or $tanh$ functions, if the outputs are large, their derivatives approach zero. This issue is known as the *vanishing gradient problem*.\n",
     "\n",
     "$f(x)  = max(x, 0)$\n",
     "\n",
     "output range: $[0, +\\infty]$\n",
     "\n",
+    "The derivative of the ReLU is:\n",
+    "\n",
     "$f'(x) = \\begin{cases}0  & \\text{ if x < 0 }\\\\ 1 & \\text{ if x >= 0 }\\end{cases}$\n",
     "\n",
-    "The main issue with this function is that it sets to zero all negative inputs. The derivative will also be zero for negative inputs, implying that some weights and biases will not be updated. Still, as mentioned before, in practice it produces good results.\n",
+    "The main issue with ReLU is that it sets all negative inputs to zero. This means that the derivative is also zero for negative inputs, implying that some weights and biases will not be updated during training. However, as mentioned earlier, ReLU still provides good results in practice.\n",
     "\n",
     "Ref: Vinod Nair, Geoffrey E. Hinton,*Rectified Linear Units Improve Restricted Boltzmann Machines* [PDF](https://www.cs.toronto.edu/~fritz/absps/reluICML.pdf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -410,18 +431,20 @@
    "source": [
     "### Swish or SILU\n",
     "\n",
-    "A product of the identity function and the sigmoid function. This is another example of an activation function introduced by Google Brain in 2017. The output is the product of the input by the sigmoid function.\n",
+    "Swish, introduced by Google Brain in 2017, is a product of the identity function and the sigmoid function. The output is the product of the input $x$ by the sigmoid of $x$.\n",
     "\n",
     "$f(x) = x \\large \\frac{1}{1+e^{-x}}$\n",
     "\n",
-    " $f'(x) = f (x) + \\large \\frac{1}{1+e^{-x}} (1 − f (x))$\n",
+    "The derivative is given by:\n",
+    "\n",
+    "$f'(x) = f (x) + \\large \\frac{1}{1+e^{-x}} (1 − f (x))$\n",
     "\n",
     "Ref: Prajit Ramachandran, Barret Zoph, Quoc V. Le, *Searching for Activation Functions* [PDF](https://arxiv.org/abs/1710.05941)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
