--- a/concepts/02-Softmax.ipynb
+++ b/concepts/02-Softmax.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Neural Network Output\n",
     "\n",
-    "The neural network output  can be interpreted in different ways, depending on the context. \n",
+    "The neural network output  can be interpreted in different ways, depending on the context:\n",
     "\n",
-    "For logistic regression it is just the output of a function, as if the activation function is the identity function: $f(x) = x$\n",
+    "- For **logistic regression**, the output is simply the result of a function, where the activation function is the identity function: $f(x) = x$\n",
     "\n",
-    "For binary classification problems  with a single output unit, the most common is the sigmoid function. In multiclass classification we have commonly multiple outputs, one for each class. \n",
+    "- For **binary classification problems**  with a single output unit, the most common activation function is the $sigmoid$ function. \n",
     "\n",
-    "A friendly interpretation is if each of these outputs could be seen as the probability of the input belonging to the respective class. This is what the **softmax** function provides.\n",
+    "In **multiclass classification** we have commonly multiple outputs, one for each class. A helpful interpretation is to view each of these outputs as the probability of the input belonging to the respective class. This is what the **softmax** function provides.\n",
     "\n",
     "\n"
    ]
@@ -24,24 +24,24 @@
    "source": [
     "## The softmax function\n",
     "\n",
-    "A multiclass classification DNN model outputs a set of numbers, one for each output unit. In a classification task the number of these outputs corresponds to the number of classes. \n",
+    "In a multiclass classification DNN model, the outputs is set of numbers, one for each output unit. In a classification task the number of these outputs corresponds to the number of classes. \n",
     "\n",
-    "Observing the outputs per se makes it difficult to evaluate the quality of a solution. It would be preferable if these outputs could be interpreted as the probability of an input belonging to each of the classes.\n",
+    "Observing the raw outputs makes it difficult to evaluate the quality of a solution. It would be preferable if these outputs could be interpreted as the probability of an input belonging to each class.\n",
     "\n",
-    "This implies that:\n",
+    "This implies two conditions:\n",
     "\n",
     "1. all outputs must be positive\n",
-    "2. the sum of all outputs must be one\n",
+    "2. the sum of all outputs must equal one\n",
     "\n",
-    "Regarding 1. there are a few ways to achieve this, for instance taking the square of the element, taking an absolute value, or exponentiate them. From the mentioned options, both the squared root and absolute value are not feasible as for each output obtained there will always be 2 possible input values. \n",
+    "Regarding 1. there are a few ways to achieve this, such as squaring the element, taking an absolute value, or exponentiating them. Among these, squaring or taking the absolute value, are not feasible as each output would have two possible input values, making the function non-invertible. \n",
     "\n",
-    "On the other hand, the $exp$ function maps from the entire $Z$ line to $Z^+$ and its invertible.\n",
+    "On the other hand, the exponential function maps all real numbers to positive values ($\\mathbb{R} \\to \\mathbb{R}^+$), and its invertible.\n",
     "\n",
-    "To make the sum of all outputs sum to $1$, all that is required is a normalization. This can be achieved by dividing each element by the sum of all elements.\n",
+    "To ensure that the sum of all outputs sum equals $1$, all that is required is a normalization. This can be achieved by dividing each element by the sum of all elements.\n",
     "\n",
-    "The softmax function:\n",
+    "This process leads to the $softmax$ function:\n",
     "\n",
-    "$ \\large f(o_i) = \\Large \\frac{\\Large e^{in_i}}{\\sum_j e^{in_j}}$\n",
+    "$ \\large f(o_i) = \\Large \\frac{\\Large e^{o_i}}{\\sum_j e^{o_i}}$\n",
     "\n",
     "This function is commonly used in the output neurons of a multiclass classifier network."
    ]
@@ -108,7 +108,7 @@
     "\n",
     "$\\begin{cases} y_0 = 0.00300928 \\\\ y_1 = 0.92676595 \\\\ y_2 = 0.07022477 \\\\ \\end{cases}$\n",
     "\n",
-    "This can be interpreted as the input having a 92.68% probability of belonging to class 1"
+    "This can be interpreted as the input having a 92.68% probability of belonging to class 1."
    ]
   },
   {
@@ -290,9 +290,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen in the above graph, when the inputs are scaled, the softmax approximates the max function. I.e, when the scaled output of $y_0$ crosses the scaled output of $y_1$ (the highest of the remaining outputs) it quickly changes from 0 to 1. Hence the maximum output rapidly converges to 1, even though its non-scaled difference from some other output might be very small. In this sense it becomes an argmax function, the winner takes it all.\n",
+    "As seen in the above graph, when the inputs are scaled, the softmax approximates the max function. That is, when the scaled output of $y_0$ surpasses the scaled output of $y_1$ (the highest of the remaining outputs) the softmax quickly shifts from 0 to 1. As a result, the maximum output rapidly converges to 1, even though its non-scaled difference from some other output is very small. In this sense, the softmax function becomes an $argmax$ function, where \"the winner takes it all\".\n",
     "\n",
-    "For smaller values the softmax is a \"softer\" version of argmax, hence the name."
+    "For smaller values the softmax behaves a \"softer\" version of argmax, hence the name."
    ]
   }
  ],
