--- a/concepts/03-Loss_function.ipynb
+++ b/concepts/03-Loss_function.ipynb
@@ -7,17 +7,17 @@
     "## Loss Function\n",
     "\n",
     "\n",
-    "Assume an image classifier model with three outputs for classes: panda, cat, dog. given an image the model makes a prediction as a probability for each class.\n",
+    "Assume an image classifier model with three outputs for classes: panda, cat, dog. Given an image, the model makes a prediction as a probability for each class.\n",
     "\n",
     "<img src=\"images/panda_model.png\" height=\"150\">\n",
     "\n",
-    "The model is wrongly predicting that the image depicts a cat with a probability of 0.75. In order to correct the model first we must compute by how much the model is wrong.\n",
+    "The model is wrongly predicting that the image depicts a cat with a probability of 0.75. In order to correct the model, we first must compute by how much the model is wrong.\n",
     "\n",
-    "In this case we have an output $\\begin{bmatrix}0.15\\\\0.75\\\\0.1\\end{bmatrix}$ and the target is $\\begin{bmatrix}1\\\\0\\\\0\\end{bmatrix}$\n",
+    "In this case the model output is $\\begin{bmatrix}0.15\\\\0.75\\\\0.1\\end{bmatrix}$ and the target, or ground truth, is $\\begin{bmatrix}1\\\\0\\\\0\\end{bmatrix}$\n",
     "\n",
-    "The loss function quantifies how bad a model is performing, the larger the value the worse the model.\n",
+    "The loss function quantifies how poorly a model is performing, the larger the value the worse the model's prediction.\n",
     "\n",
-    " The loss function is a function with two arguments: the ground truth, or target, and the model's output. It is a measure of the discrepancy between the model's output and the groud truth.\n",
+    "A loss function is a function that takes two arguments: the ground truth, or target, and the model's output. It measures the discrepancy between the model's output and the ground truth.\n",
     "\n",
     "loss $ \\Bigl( \\begin{bmatrix}1\\\\0\\\\0\\end{bmatrix} , \\begin{bmatrix}0.15\\\\0.75\\\\0.1\\end{bmatrix}  \\Bigl) = \\dots$\n",
     "\n"
@@ -29,10 +29,15 @@
    "source": [
     "### Mean Squared Error\n",
     "\n",
-    "The simplest loss function, it computes the sum of the squared difference between the output and the ground truth.\n",
+    "MSE is one of the simplest loss function. It computes the average of the squared differences between the predicted output and the ground truth.\n",
     "\n",
     "$ e = 1/N \\times \\large\\sum_{i=1}^N (gt_i-pred_i)^2$\n",
-    "\n"
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $N$ is the number of data points;\n",
+    "- $gt_i$ is the ground truth for the $i$-th example;\n",
+    "- $pred_i$ is the predicted value for the $i$-th example."
    ]
   },
   {
@@ -132,6 +137,12 @@
    "metadata": {},
    "source": [
     "### Cross Entropy Loss\n",
+    "\n",
+    "Cross Entropy Loss is commonly used in classification problems, particularly in tasks like binary and multiclass classification.\n",
+    "\n",
+    "For binary classification problems, where the output is a probability for the two classes, the Cross Entropy Loss is defined as:\n",
+    "\n",
+    "$L = - (y \\times log(p) + (1-y) \\timeslog(1-p))$\n",
     "\n",
     "$ e =  - \\large \\sum_i gt_i \\times log(pred_i)$"
    ]
